--- a/it4women/index.html
+++ b/it4women/index.html
@@ -159,7 +159,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section class="container-wide">
 
-	<h2>Stylesheets and Colour Systems</h2>
+	<h2>Stylesheets, Colours and Images</h2>
 
 	<div class="flex-grid">
 
@@ -198,7 +198,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section class="container-wide">
 
-	<h2>Google Fonts and Google Analytics</h2>
+	<h2>Typography with Google Fonts</h2>
 
 	<div class="flex-grid">
 		<div class="item-3">
@@ -210,18 +210,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<a class="btn-solid btn-rounded" href="exercises/intro-google-fonts.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
 
+		<div class="item-3">&nbsp;</div>
 
-		<div class="item-3">
-			<a href="exercises/setting-up-google-analytics.html">
-				<img src="assets/img/toc-ga.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="exercises/setting-up-google-analytics.html">Setting Up Google Analytics</a></h3>
-			<p>Monitoring your website visitors with Google Analytics and adding the unique tracking code to your web pages.</p>
-			<a class="btn-solid btn-rounded" href="exercises/setting-up-google-analytics.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
-		</div>
-
-		<div class="item-3">&nbsp;
-		</div>
+		<div class="item-3">&nbsp;</div>
 
 	</div><!--- /flex-grid -->
 </section>
