--- a/it4women/index.html
+++ b/it4women/index.html
@@ -218,8 +218,78 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
+<section class="container-wide">
+
+	<h2>The Box Model</h2>
 
 
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<a href="exercises/intro-box-model.html">
+				<img src="assets/img/toc-box-model-new.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-box-model.html">Introduction to the Box Model</a></h3>
+			<p>Exploring the concept of the &#8216;box model&#8217; and understanding the three main CSS properties of the div tag: padding, borders and margins.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-box-model.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
+
+		<div class="item-3">
+			<a href="exercises/working-with-panels.html">
+				<img src="assets/img/toc-panels.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/working-with-panels.html">Working with Panels</a></h3>
+			<p>Using the box model principles and the HTML div tag to create and style small, visually attractive panels of content in a web page.</p>
+			<a class="btn-solid btn-rounded" href="exercises/working-with-panels.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+
+		<div class="item-3">
+			 <a href="exercises/working-with-sections.html">
+				<img src="assets/img/toc-sections.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/working-with-sections.html">Working with Sections</a></h3>
+			<p>Using the box model principles and the HTML div tag to create and style vertically alternating sections of content in a web page.</p>
+			<a class="btn-solid btn-rounded" href="exercises/working-with-sections.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+	</div><!--- /flex-grid -->
+
+
+</section>
+
+
+<section class="container-wide">
+
+	<h2>Responsive Web Design</h2>
+
+	<div class="flex-grid">
+		<div class="item-3">
+			<a href="exercises/intro-media-queries.html">
+				<img src="assets/img/toc-flexbox.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-media-queries.html">Introduction to Media Queries</a></h3>
+			<p>Adding media queries to a CSS file so that web page elements can resize according to the width and height of the screen.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-media-queries.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
+
+		<div class="item-3">
+			<a href="exercises/intro-fluid-type.html">
+				<img src="assets/img/toc-fluid-typography.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-fluid-type.html">Introduction to Fluid Typography</a></h3>
+			<p>Applying the fluid typographic equation to scale font sizes responsively.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-fluid-type.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+
+		<div class="item-3">&nbsp;
+
+		</div>
+
+
+
+	</div><!--- /flex-grid -->
 
 
 <section class="block-content bg-white">
