--- a/it4women/exercises/final-media/page-11.html
+++ b/it4women/exercises/final-media/page-11.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,9 +9,9 @@
 
     <link rel="stylesheet" href="style-11.css">
 
-  <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">  
-<link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">  
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">  
        
 </head>
 
@@ -31,26 +30,27 @@
         <p>In pellentesque, odio suscipit ornare vulputate, est nunc consequat neque, nec faucibus nulla arcu id ligula. Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium at. Etiam aliquam, ipsum eu tincidunt.</p>
     </div>
 
-    <div class="container-block bg-dark-2">    
+    <div class="container-block bg-dark-2">
         <h3>Sub Heading Two</h3>
-        <p><b>Auctor odio orci</b> bibendum quam, nec dictum ligula nisi ut tortor. Sed pharetra, tortor et dictum scelerisque, libero neque rhoncus dui, in laoreet neque turpis sed nibh. Praesent quis facilisis sapien, vitae laoreet urna. Nunc eget ornare turpis. </p>
+        <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus labore asperiores enim nobis.</p>
 
-        <p>Phasellus ut libero a dui eleifend ullamcorper sit amet vestibulum nulla. Integer vitae diam non arcu sagittis finibus. Aliquam a luctus sem. Morbi volutpat faucibus quam, eget volutpat quam accumsan eu. Proin tempus volutpat rhoncus. Fusce scelerisque dolor.</p>
+        <p>In pellentesque, odio suscipit ornare vulputate, est nunc consequat neque, nec faucibus nulla arcu id ligula. Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium at. Etiam aliquam, ipsum eu tincidunt.</p>
     </div>
 
     <div class="container-block bg-dark-1">
         <h3>Sub Heading Three</h3>
-        <p><b>Massa sollicitudin interdum</b> tortor risus, rhoncus at lacus elementum, condimentum ultricies metus. Quisque non ante posuere, bibendum magna sed, faucibus diam. Morbi efficitur tortor ullamcorper iaculis pretium. Fusce rhoncus vitae tellus ut dictum.</p>
+        <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus labore asperiores enim nobis.</p>
 
-        <p>At tincidunt nibh lacus ac sem. Aliquam volutpat sem id mollis porttitor. Mauris ornare, risus sit amet laoreet tempus, eros tellus fermentum orci, id pulvinar magna neque non turpis. Vestibulum vitae pretium massa, in molestie odio. Vestibulum imperdiet.</p>
+        <p>In pellentesque, odio suscipit ornare vulputate, est nunc consequat neque, nec faucibus nulla arcu id ligula. Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium at. Etiam aliquam, ipsum eu tincidunt.</p>
     </div>
 
-    <div class="container-block bg-dark-2">    
+    <div class="container-block bg-dark-2">
         <h3>Sub Heading Four</h3>
-        <p><b>Aliquam ex quis</b> dictum arcu. Nam pulvinar odio orci, a pretium arcu feugiat eget. Nam sed eros at orci molestie pellentesque. Vestibulum augue tortor, placerat vel velit id, lacinia facilisis risus. Vestibulum ante ipsum primis in faucibus orci luctus.</p>
+        <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus labore asperiores enim nobis.</p>
 
-        <p>Et ultrices posuere cubilia curae; Donec hendrerit mi in enim finibus, sed porttitor tortor semper. Nunc aliquam, nunc sed convallis eleifend, libero urna mollis odio, eget bibendum ante nisl vitae metus. Integer posuere, ipsum quis vehicula convallis.</p>
+        <p>In pellentesque, odio suscipit ornare vulputate, est nunc consequat neque, nec faucibus nulla arcu id ligula. Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium at. Etiam aliquam, ipsum eu tincidunt.</p>
     </div>
+
 
 </body>
 </html>
