--- a/it4women/exercises/intro-box-model.html
+++ b/it4women/exercises/intro-box-model.html
@@ -80,10 +80,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p><a href="#box-classes">Working with classes and class names</a></p>
 		<p><a href="#box-selectors">Styling with parent-child selectors</a></p>
 		<!-- <p class="toc-indent"><a href="#box-muliple">Applying multiple classes</a></p> -->
-		<p class="toc-indent"><a href="#box-upload">Uploading your files to GitHub</a></p>
-
 		<p><a href="#box-overview">The box model: an overview</a></p>
-
+		<p><a href="#github-upload">Uploading your files to GitHub</a></p>
 		<p><a href="#further-resources">Further resources</a></p>
 	</div>
 </section>
@@ -650,7 +648,7 @@ At the bottom of the stylesheet file, copy-and-paste the following.
 
 </section>
 
-<section id="box-upload" class="wrapper-content">
+<section id="github-upload" class="wrapper-content">
 	<h2>Uploading your files to GitHub</h2>
 
 
@@ -669,7 +667,6 @@ At the bottom of the stylesheet file, copy-and-paste the following.
 
 		<img src="assets/img/intro-google-fonts/github-full-list-home.png" alt="github-signin"></li>
 
-
 		<li>On the next GitHub screen, click the <b>Add file</b> button.
 		<img src="assets/img/intro-google-fonts/github-btn-add-file.png" alt="github-upload-portfolio"></li>
 
@@ -677,7 +674,7 @@ At the bottom of the stylesheet file, copy-and-paste the following.
 
 		<img src="assets/img/intro-google-fonts/github-btn-add-file-dropdown.png" alt="Introduction to Google Fonts"></li>
 
-		<li>Select or drag-and-drop the following web page and stylesheet to upload them to your GitHub account:
+		<li>Select or drag-and-drop the following web page and stylesheet to upload them to the <b>websites</b> folder of your GitHub account:
 			<span class="inside-ol">&nbsp;</span>
 			<b>divs-sandbox.html</b><br>
 			<b>divs-sandbox.css</b></li>
