--- a/it4women/exercises/working-with-panels.html
+++ b/it4women/exercises/working-with-panels.html
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Copy-and-paste the following new line to your web page, directly under the line that contains the link to the <b>page-8.html</b> web page.
 
 <pre class="language-html">
-&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"page-9.html"</span>&gt;<span class="white">Web Page with Panels</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt;
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-9.html"</span>&gt;<span class="white">Web Page with Panels</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt;
 </pre></li>
 
 </ol>
@@ -385,16 +385,39 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section id="panels-upload-2" class="wrapper-content">
 	<h2>Uploading your files to GitHub</h2>
 
-	<p>Upload the following web pages and stylesheet to your account on GitHub:</p>
-	
-	<p><b>index.html</b><br>
-	<b>page-9.html</b><br>
-	<b>style-9.css</b></p>
+	<p>After you have finished working with your files, you are ready to upload them to your account on GitHub.</p>
+
+	<ol>
+
+		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
+		<img src="assets/img/intro-google-fonts/github-signin.png" alt="github-signin"></li>
+
+		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
+		<span class="inside-ol">&nbsp;</span>
+		<b>username.github.io</b>
+
+		<img src="assets/img/intro-google-fonts/github-repo-select.png" alt="github-signin"></li>
+
+		<li>In File/Windows Explorer, select <i>only</i> the <b>index.html</b> web page and no other file.
+		
+		<img src="assets/img/intro-images/github-upload-home-page.png" alt="Introduction to Images"></li>
+
+		<li>Upload your <b>index.html</b> file to your repository on Github.</li>
+
+		<li>Next, on your GitHub account, display your <b>websites</b> folder. This is where your sample web pages, stylesheets and images are contained.
+
+		<img src="assets/img/intro-google-fonts/github-full-list-home.png" alt="github-signin"></li>
+
+		<li>To your <b>websites</b> folder, upload the following web page and stylesheet:
+		<span class="inside-ol">&nbsp;</span>
+		<b>page-9.html</b><br>
+		<b>style-9.css</b></li>
+	</ol>
 
 	<p>Your web pages will be published at web address similar to the following:</p>
 
 	<p><b>https://username.github.io/index.html</b><br>
-	<b>https://username.github.io/page-9.html</b></p>
+	<b>https://username.github.io/websites/page-9.html</b></p>
 
 	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
 	<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
