--- a/it4women/exercises/working-with-sections.html
+++ b/it4women/exercises/working-with-sections.html
@@ -728,9 +728,9 @@ You do not need to change the class name or the <b>background-color</b> value of
 		<li>Copy-and-paste the following three new lines to your web page, directly under the line that contains the link to the <b>page-9.html</b> web page.
 
 <pre class="language-html">
-&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"page-10.html"</span>&gt;<span class="white">Web Page with Pastel Sections</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt;
-&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"page-11.html"</span>&gt;<span class="white">Web Page with Dark Sections</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt;
-&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"page-12.html"</span>&gt;<span class="white">Web Page with Alternating Sections</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt;
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-10.html"</span>&gt;<span class="white">Web Page with Pastel Sections</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt;
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-11.html"</span>&gt;<span class="white">Web Page with Dark Sections</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt;
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-12.html"</span>&gt;<span class="white">Web Page with Alternating Sections</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt;
 </pre></li>
 
 </ol>
@@ -745,16 +745,39 @@ You do not need to change the class name or the <b>background-color</b> value of
 
 	<h2>Uploading your files to GitHub</h2>
 
-	<p>Upload the following web pages, stylesheets and image to your account on GitHub:</p>
+	<p>After you have finished working with your files, you are ready to upload them to your account on GitHub.</p>
 
-	<p><b>index.html</b><br>
-	<b>page-10.html</b><br>
-	<b>page-11.html</b><br>
-	<b>page-12.html</b><br>
-	<b>style-10.css</b><br>
-	<b>style-11.css</b><br>
-	<b>style-12.css</b><br>
-	<b>three-staff.png</b></p>
+	<ol>
+
+		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
+		<img src="assets/img/intro-google-fonts/github-signin.png" alt="github-signin"></li>
+
+		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
+		<span class="inside-ol">&nbsp;</span>
+		<b>username.github.io</b>
+
+		<img src="assets/img/intro-google-fonts/github-repo-select.png" alt="github-signin"></li>
+
+		<li>In File/Windows Explorer, select <i>only</i> the <b>index.html</b> web page and no other file.
+		
+		<img src="assets/img/intro-images/github-upload-home-page.png" alt="Introduction to Images"></li>
+
+		<li>Upload your <b>index.html</b> file to your repository on Github.</li>
+
+		<li>Next, on your GitHub account, display your <b>websites</b> folder. This is where your sample web pages, stylesheets and images are contained.
+
+		<img src="assets/img/intro-google-fonts/github-full-list-home.png" alt="github-signin"></li>
+
+		<li>To your <b>websites</b> folder, upload the following web pages and stylesheets:
+		<span class="inside-ol">&nbsp;</span>
+		<b>page-10.html</b><br>
+		<b>page-11.html</b><br>
+		<b>page-12.html</b><br>
+		<b>style-10.css</b><br>
+		<b>style-11.css</b><br>
+		<b>style-12.css</b><br>
+		<b>three-staff.png</b></li>
+	</ol>
 
 	<p>Your web pages will be published at web addresses similar to the following:</p>
 
